--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -9,12 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
-    <title>React App</title>
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courgette&family=Dancing+Script:wght@700&family=Hind+Madurai:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Brand Shop</title>
   </head>
   <body>
-  
     <div id="root"></div>
-   
   </body>
 </html>
